--- a/server/src/swagger/user/GET.yml
+++ b/server/src/swagger/user/GET.yml
@@ -17,6 +17,6 @@ responses:
     schema:
       example:
         user:
-          last_name: Doe
+          last_name: paul
           first_name: John
           age: 30
